Alterações diversas no site
pack de alterações no conteudo

--- a/Clientes.html
+++ b/Clientes.html
@@ -47,7 +47,7 @@
                                 <div class="container container-lg navbar-container">
                                     <!-- Brand/Logo -->
                                     <a class="navbar-brand" href="/">
-                                        <img src="view/img/brand/logo.png">
+                                        <img src="view/img/brand/logo.png" style="width: 125%;">
                                     </a>
 
                                     <div class="d-inline-block">
@@ -62,29 +62,16 @@
                                     <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
                                         <ul class="navbar-nav">
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Home</a>
+                                                <a href="index.html" class="nav-link">Home</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Nossos Bichanos</a>
+                                                <a href="Clientes.html" class="nav-link">Nossos Bichanos</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Orçamentos</a>
+                                                <a href="Orcamentos.html" class="nav-link">Orçamentos</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Fale Conosco</a>
-                                            </li>
-
-                                            <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alterar Cores</a>
-
-                                                <ul class="dropdown-menu">
-                                                    <li class="dropdown">
-                                                        <a href="azul.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Azul</a>
-                                                        <a href="roxo.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Roxa</a>
-                                                        <a href="verde.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Verde</a>
-                                                        <a href="gradiente.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gradiente</a>
-                                                    </li>
-                                                </ul>
+                                                <a href="FaleConosco.html" class="nav-link">Fale Conosco</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -96,7 +83,7 @@
                             <span class="mask mask-base-1--style-1"></span>
                             <div class="container">
                                 <div class="row">
-                                    <div class="offset-3 col-lg-6 pt-5 text-center">
+                                    <div class="col-lg-6 pt-5">
                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Nós amamos eles!</h2>
                                         <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Conheça os responsáveis pelo nosso sucesso e grande amor pelo o que fazemos e o que seus donos tem a dizer sobre a dedicação e serviços prestados por nós da Tia Ju - Pet Sitter.</p>
 
@@ -159,19 +146,139 @@
                             </div>
                         </section>
 
-                        <section class="sct-color-1 pt-5 pb-5">
+                        <section class="pt-100 sm-top-50 sm-bot-50">
                             <div class="container container-lg">
-                                <div class="row cols-xs-space cols-sm-space cols-md-space">
-                                    <div class="offset-1 col-lg-10 text-center">
-                                    	<div id="instafeedExample-4" data-user-id="7493247605" data-limit="8" data-col="3" data-classes="z-depth-1 z-depth-2--hover" data-lightbox="true" class="instafeed row"></div>
+
+                                <div class="row cols-md-space cols-sm-space cols-xs-space">
+                                    <div class="col-lg-3">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+
+                                <div class="row cols-md-space cols-sm-space cols-xs-space pt-4">
+                                    <div class="col-lg-3">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="row cols-md-space cols-sm-space cols-xs-space pt-4">
+                                    <div class="col-lg-3">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-3 sm-top-20">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </section>
 
-                        <div id="instafeedExample-4" data-user-id="4168279954" data-limit="8" data-col="3" data-classes="z-depth-1 z-depth-2--hover" data-lightbox="true" class="instafeed row"></div>
-
-                        <section class="sct-color-1">
+                        <section class="sct-color-1 pt-5">
                             <div class="container container-lg">
                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                     <div class="col-lg-7">
@@ -247,6 +354,15 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-lg c-base-1">Sempre</h3>
                                                 <h3 class="heading heading-5 strong-500">a sua disposição</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-12 col-md-12">
+                                        <div class="icon-block icon-block--style-1-v5 text-center">
+                                            <div class="block-content">
+                                                <hr>
+                                                <h3 class="heading heading-5 strong-500">Para seu conforto aceitamos cartões de crédito e débito!</h3>
                                             </div>
                                         </div>
                                     </div>
