--- a/Orcamentos.html
+++ b/Orcamentos.html
@@ -47,7 +47,7 @@
                                 <div class="container container-lg navbar-container">
                                     <!-- Brand/Logo -->
                                     <a class="navbar-brand" href="/">
-                                        <img src="view/img/brand/logo.png">
+                                        <img src="view/img/brand/logo.png" style="width: 125%;">
                                     </a>
 
                                     <div class="d-inline-block">
@@ -62,30 +62,18 @@
                                     <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
                                         <ul class="navbar-nav">
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Home</a>
+                                                <a href="index.html" class="nav-link">Home</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Nossos Bichanos</a>
+                                                <a href="Clientes.html" class="nav-link">Nossos Bichanos</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Orçamentos</a>
+                                                <a href="Orcamentos.html" class="nav-link">Orçamentos</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link">Fale Conosco</a>
+                                                <a href="FaleConosco.html" class="nav-link">Fale Conosco</a>
                                             </li>
 
-                                            <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alterar Cores</a>
-
-                                                <ul class="dropdown-menu">
-                                                    <li class="dropdown">
-                                                        <a href="azul.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Azul</a>
-                                                        <a href="roxo.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Roxa</a>
-                                                        <a href="verde.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Verde</a>
-                                                        <a href="gradiente.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gradiente</a>
-                                                    </li>
-                                                </ul>
-                                            </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -96,11 +84,11 @@
                             <span class="mask mask-base-1--style-1"></span>
                             <div class="container">
                                 <div class="row">
-                                    <div class="offset-3 col-lg-6 pt-5 text-center">
-                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Nós amamos eles!</h2>
-                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Conheça os responsáveis pelo nosso sucesso e grande amor pelo o que fazemos e o que seus donos tem a dizer sobre a dedicação e serviços prestados por nós da Tia Ju - Pet Sitter.</p>
+                                    <div class="col-lg-6 pt-5">
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Orçamento fácil e rápido!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Saiba rápidamente qual será o investimento para a segurança e bem estar de seu amigo animal.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Também quero meu pet bem cuidado!</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Aceitamos cartões de crédito e débito!</a>
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +156,9 @@
 
                                     	<form>
                                     		<div class="row">
-                                    			<div class="col-md-12 mb-3">
+                                    			<h2 class="heading strong-600 text-normal">Solicite um orçamento agora mesmo!</h2>
+
+                                    			<div class="col-md-12 mt-3 mb-3">
                                     				<label>Nome Completo</label>
                                     				<input type="text" class="form-control form-control-lg" placeholder="Nome Completo" required>
                                     			</div>
@@ -186,6 +176,12 @@
                                     		</div>
 
                                     		<div class="row">
+                                    			<div class="col-md-12">
+                                    				<hr>
+                                    					<span>Selecione seu(s) pet(s)</span>
+                                    				<hr>
+                                    			</div>
+
                                                 <div class="col-md-4">
                                                     <div>
                                                         <span>Cães</span>
@@ -196,7 +192,7 @@
                                                         <input type="checkbox" name="txtCaesC" id="txtCaesC" value="val1" class="hidden" autocomplete="off">
                                                     </label>
 
-                                                    <input type="numer" class="form-control form-control-lg" name="QtdCaes" id="QtdCaes" placeholder="Quantidade de Cães" required="">
+                                                    <input type="number" class="form-control form-control-lg" name="QtdCaes" id="QtdCaes" placeholder="Quantidade de Cães">
                                                 </div>
 
                                                 <div class="col-md-4">
@@ -209,7 +205,7 @@
                                                         <input type="checkbox" name="txtGatosC" id="txtGatosC" value="val2" class="hidden" autocomplete="off">
                                                     </label>
 
-                                                    <input type="numer" class="form-control form-control-lg" name="QtdGatos" id="QtdGatos" placeholder="Quantidade de Gatos" required="">
+                                                    <input type="number" class="form-control form-control-lg" name="QtdGatos" id="QtdGatos" placeholder="Quantidade de Gatos">
                                                 </div>
 
                                                 <div class="col-md-4">
@@ -222,19 +218,19 @@
                                                         <input type="checkbox" name="txtOutrosC" id="txtOutrosC" value="val3" class="hidden" autocomplete="off">
                                                     </label>
 
-                                                    <input type="numer" class="form-control form-control-lg" name="QtdAnimais" id="QtdAnimais" placeholder="Quantidade de Animais" required="">
+                                                    <input type="number" class="form-control form-control-lg" name="QtdAnimais" id="QtdAnimais" placeholder="Quantidade de Animais">
                                                 </div>
 
                                     		</div>
 
-                                    		<div class="row">
+                                    		<div class="row pt-3">
                                     			<div class="col-md-6 mb-3">
-                                    				<label>Data Inicial</label>
+                                    				<label>Periodo Inicial</label>
 													<input type="text" class="form-control form-control-lg datepicker" placeholder="Escolha uma Data">
                                     			</div>
 
                                     			<div class="col-md-6 mb-3">
-                                    				<label>Data Final</label>
+                                    				<label>Periodo Final</label>
 													<input type="text" class="form-control form-control-lg datepicker" placeholder="Escolha uma Data">
                                     			</div>
 
