Alterações em massa 02
Alterações em massa 02

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 pt-5">
-                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Viaje com total Tranquilidade!</h2>
-                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Nós sabemos que o bem estar de seu Pet é tudo para você, por isto nós da Tia Ju - Pet Sitter nos especializamos nos cuidados de seu amigo pet, para prover a ele e a você o melhor atendimento possível.</p>
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-black">Viaje com total Tranquilidade!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200" style="color: black !important;">Nós sabemos que o bem estar de seu Pet é tudo para você, por isto nós da Tia Ju - Pet Sitter nos especializamos nos cuidados de seu amigo pet, para prover a ele e a você o melhor atendimento possível.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Quero meu pet bem cuidado!</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Quero meu pet bem cuidado!</a>
                                     </div>
                                 </div>
                             </div>
