--- a/Clientes.html
+++ b/Clientes.html
@@ -196,7 +196,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
+                                                    <img src="view/img/amigos/img1.jpeg">
                                                 </a>
                                             </div>
                                         </div>
@@ -206,7 +206,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
+                                                    <img src="view/img/amigos/img2.jpeg">
                                                 </a>
                                             </div>
                                         </div>
@@ -216,7 +216,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                    <img src="view/img/amigos/img3.jpeg">
                                                 </a>
                                             </div>
                                         </div>
@@ -226,49 +226,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="row cols-md-space cols-sm-space cols-xs-space pt-4">
-                                    <div class="col-lg-3">
-                                        <div class="block block-image-holder image-animate-wrapper">
-                                            <div class="block-image image-animate--hover">
-                                                <a href="#">
-                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3 sm-top-20">
-                                        <div class="block block-image-holder image-animate-wrapper">
-                                            <div class="block-image image-animate--hover">
-                                                <a href="#">
-                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3 sm-top-20">
-                                        <div class="block block-image-holder image-animate-wrapper">
-                                            <div class="block-image image-animate--hover">
-                                                <a href="#">
-                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-3 sm-top-20">
-                                        <div class="block block-image-holder image-animate-wrapper">
-                                            <div class="block-image image-animate--hover">
-                                                <a href="#">
-                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                    <img src="view/img/amigos/img4.jpeg">
                                                 </a>
                                             </div>
                                         </div>
