--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
+                                                    <img src="view/img/amigos/img1.jpeg">
                                                 </a>
                                             </div>
                                         </div>
@@ -410,7 +410,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
+                                                    <img src="view/img/amigos/img3.jpeg">
                                                 </a>
                                             </div>
                                         </div>
@@ -420,7 +420,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
+                                                    <img src="view/img/amigos/img2.jpeg">
                                                 </a>
                                             </div>
                                         </div>
