--- a/Clientes.html
+++ b/Clientes.html
@@ -84,10 +84,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 pt-5">
-                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Nós amamos eles!</h2>
-                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Conheça os responsáveis pelo nosso sucesso e grande amor pelo o que fazemos e o que seus donos tem a dizer sobre a dedicação e serviços prestados por nós da Tia Ju - Pet Sitter.</p>
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-black">Nós amamos eles!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200" style="color: black !important;">Conheça os responsáveis pelo nosso sucesso e grande amor pelo o que fazemos e o que seus donos tem a dizer sobre a dedicação e serviços prestados por nós da Tia Ju - Pet Sitter.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Também quero meu pet bem cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline" style="z-index: 99;">Também quero meu pet bem cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Ambiente Familiar</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Seu pet não sofre com mudanças de ambiente, evitando o estresse do animal.
                                                 </p>
                                             </div>
                                         </div>
@@ -123,7 +123,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Brincadeiras e Muito Carinho</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Seu pet irá receber além de cuidados, muita atenção para não se sentir só. Brincadeiras e passeios fazem parte da rotina da tia Ju. Tenha certeza que seu amigo será muito bem cuidado.
                                                 </p>
                                             </div>
                                         </div>
@@ -137,7 +137,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Profissionais Qualificados</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Administradora de empresas por profissão e apaixonada por animais por vocação, tia Ju desde criança se dedicava aos cuidados dos bichanos. São mais de 25 anos cuidando e amando os pet. <b>Nosso trabalho é feito com a maior dedicação, amor e profissionalismo. Conte conosco sempre!</b>
                                                 </p>
                                             </div>
                                         </div>
@@ -341,7 +341,7 @@
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                             Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -356,16 +356,16 @@
                                             <div class="text-xs-center text-sm-left">
                                                 <ul class="footer-menu">
                                                     <li>
-                                                        <a href="#" style="padding-left: 0;">Home</a>
+                                                        <a href="index.html" style="padding-left: 0;">Home</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Nossos Bichanos</a>
+                                                        <a href="Clientes.html">Nossos Bichanos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Orçamentos</a>
+                                                        <a href="Orcamentos.html">Orçamentos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Fale Conosco</a>
+                                                        <a href="FaleConosco.html">Fale Conosco</a>
                                                     </li>
                                                 </ul>
                                             </div>
