--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -85,10 +85,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 pt-5">
-                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Estamos a sua disposição!</h2>
-                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Dúvidas, sugestões ou quaisquer outras coisas que precisar pode falar conosco que esperando seu contato.</p>
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-black">Estamos a sua disposição!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200" style="color: black !important;">Dúvidas, sugestões ou quaisquer outras coisas que precisar pode falar conosco que esperando seu contato.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Também quero meu pet bem cuidado!</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline" style="z-index: 99;">Estamos a sua disposição!</a>
                                     </div>
                                 </div>
                             </div>
@@ -237,7 +237,7 @@
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                             Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -252,16 +252,16 @@
                                             <div class="text-xs-center text-sm-left">
                                                 <ul class="footer-menu">
                                                     <li>
-                                                        <a href="#" style="padding-left: 0;">Home</a>
+                                                        <a href="index.html" style="padding-left: 0;">Home</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Nossos Bichanos</a>
+                                                        <a href="Clientes.html">Nossos Bichanos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Orçamentos</a>
+                                                        <a href="Orcamentos.html">Orçamentos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Fale Conosco</a>
+                                                        <a href="FaleConosco.html">Fale Conosco</a>
                                                     </li>
                                                 </ul>
                                             </div>
