--- a/Orcamentos.html
+++ b/Orcamentos.html
@@ -85,10 +85,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 pt-5">
-                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Orçamento fácil e rápido!</h2>
-                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Saiba rápidamente qual será o investimento para a segurança e bem estar de seu amigo animal.</p>
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-black">Orçamento fácil e rápido!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200" style="color: black !important;">Saiba rápidamente qual será o investimento para a segurança e bem estar de seu amigo animal.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Aceitamos cartões de crédito e débito!</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline" style="z-index: 99;">Aceitamos Cartões de Crédito e Débito!</a>
                                     </div>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Ambiente Familiar</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Seu pet não sofre com mudanças de ambiente, evitando o estresse do animal.
                                                 </p>
                                             </div>
                                         </div>
@@ -124,7 +124,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Brincadeiras e Muito Carinho</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Seu pet irá receber além de cuidados, muita atenção para não se sentir só. Brincadeiras e passeios fazem parte da rotina da tia Ju. Tenha certeza que seu amigo será muito bem cuidado.
                                                 </p>
                                             </div>
                                         </div>
@@ -138,7 +138,7 @@
                                             <div class="block-content">
                                                 <h3 class="heading heading-4 strong-600 text-capitalize">Profissionais Qualificados</h3>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                    Administradora de empresas por profissão e apaixonada por animais por vocação, tia Ju desde criança se dedicava aos cuidados dos bichanos. São mais de 25 anos cuidando e amando os pet. <b>Nosso trabalho é feito com a maior dedicação, amor e profissionalismo. Conte conosco sempre!</b>
                                                 </p>
                                             </div>
                                         </div>
@@ -349,7 +349,7 @@
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                             Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -364,16 +364,16 @@
                                             <div class="text-xs-center text-sm-left">
                                                 <ul class="footer-menu">
                                                     <li>
-                                                        <a href="#" style="padding-left: 0;">Home</a>
+                                                        <a href="index.html" style="padding-left: 0;">Home</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Nossos Bichanos</a>
+                                                        <a href="Clientes.html">Nossos Bichanos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Orçamentos</a>
+                                                        <a href="Orcamentos.html">Orçamentos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Fale Conosco</a>
+                                                        <a href="FaleConosco.html">Fale Conosco</a>
                                                     </li>
                                                 </ul>
                                             </div>
