--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-black">Viaje com total Tranquilidade!</h2>
                                         <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200" style="color: black !important;">Nós sabemos que o bem estar de seu Pet é tudo para você, por isto nós da Tia Ju - Pet Sitter nos especializamos nos cuidados de seu amigo pet, para prover a ele e a você o melhor atendimento possível.</p>
 
-                                        <a href="#" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Quero meu pet bem cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-secondary btn-circle btn-outline" style="z-index: 99;">Quero meu pet bem cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -166,7 +166,7 @@
                                                 Seu bichinho fica no conforto do seu próprio lar, dormindo em sua caminha quentinha, com os cheiros familiares, próprios brinquedinhos, com suas rotinas e ambientes inalterados.
                                             </h2>
 
-                                            <a href="#" class="btn btn-styled btn-base-1 btn-circle mt-5" style="z-index: 99">Quero meu Pet Bem Cuidado!</a>
+                                            <a href="Orcamentos.html" class="btn btn-styled btn-base-1 btn-circle mt-5" style="z-index: 99">Quero meu Pet Bem Cuidado!</a>
                                         </div>
                                     </div>
                                 </div>
@@ -428,7 +428,7 @@
                                 </div>
 
                                 <div class="text-center pt-5 sm-top-50">
-                                    <a href="#" class="link link-sm link--style-2 text-upeprcase text-uppercase strong-600">Conheça todos nossos amigos</a>
+                                    <a href="Clientes.html" class="link link-sm link--style-2 text-upeprcase text-uppercase strong-600">Conheça todos nossos amigos</a>
                                 </div>
                             </div>
                         </section>
@@ -446,7 +446,7 @@
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                             Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
+                                        <a href="Orcamentos.html" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -461,16 +461,16 @@
                                             <div class="text-xs-center text-sm-left">
                                                 <ul class="footer-menu">
                                                     <li>
-                                                        <a href="#" style="padding-left: 0;">Home</a>
+                                                        <a href="index.html" style="padding-left: 0;">Home</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Nossos Bichanos</a>
+                                                        <a href="Clientes.html">Nossos Bichanos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Orçamentos</a>
+                                                        <a href="Orcamentos.html">Orçamentos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Fale Conosco</a>
+                                                        <a href="FaleConosco.html">Fale Conosco</a>
                                                     </li>
                                                 </ul>
                                             </div>
